{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 47,
  "lineage": "06eeb47d-586e-8d55-b684-294889671fa9",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "devops-ip-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/e19611d3-62cd-4569-99b9-10ba8d0f4e79/resourceGroups/devops-resources/providers/Microsoft.Network/publicIPAddresses/devops-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "swedencentral",
            "name": "devops-ip",
            "resource_group_name": "devops-resources",
            "sku": "Basic",
            "tags": {
              "environment": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "devops-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e19611d3-62cd-4569-99b9-10ba8d0f4e79/resourceGroups/devops-resources/providers/Microsoft.Network/networkInterfaces/devops-nic",
            "internal_domain_name_suffix": "ed4i34juwtyedaypowg3rgeuec.gvxx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e19611d3-62cd-4569-99b9-10ba8d0f4e79/resourceGroups/devops-resources/providers/Microsoft.Network/publicIPAddresses/devops-ip",
                "subnet_id": "/subscriptions/e19611d3-62cd-4569-99b9-10ba8d0f4e79/resourceGroups/devops-resources/providers/Microsoft.Network/virtualNetworks/devops-network/subnets/devops-subnet"
              }
            ],
            "location": "swedencentral",
            "name": "devops-nic",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "devops-resources",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_public_ip.devops-ip",
            "azurerm_resource_group.devops_rg",
            "azurerm_subnet.devops-subnet",
            "azurerm_virtual_network.devops_vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "devops_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e19611d3-62cd-4569-99b9-10ba8d0f4e79/resourceGroups/devops-resources/providers/Microsoft.Network/networkSecurityGroups/devops-sg",
            "location": "swedencentral",
            "name": "devops-sg",
            "resource_group_name": "devops-resources",
            "security_rule": [],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.devops_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "devops-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/e19611d3-62cd-4569-99b9-10ba8d0f4e79/resourceGroups/devops-resources/providers/Microsoft.Network/networkSecurityGroups/devops-sg/securityRules/devops-dev-rule",
            "name": "devops-dev-rule",
            "network_security_group_name": "devops-sg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "devops-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.devops_sg",
            "azurerm_resource_group.devops_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "devops-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/e19611d3-62cd-4569-99b9-10ba8d0f4e79/resourceGroups/devops-resources/providers/Microsoft.Network/publicIPAddresses/devops-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "swedencentral",
            "name": "devops-ip",
            "resource_group_name": "devops-resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.devops_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "devops-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e19611d3-62cd-4569-99b9-10ba8d0f4e79/resourceGroups/devops-resources/providers/Microsoft.Network/virtualNetworks/devops-network/subnets/devops-subnet",
            "name": "devops-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "devops-resources",
            "virtual_network_name": "devops-network"
          },
          "dependencies": [
            "azurerm_resource_group.devops_rg",
            "azurerm_virtual_network.devops_vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "devops-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e19611d3-62cd-4569-99b9-10ba8d0f4e79/resourceGroups/devops-resources/providers/Microsoft.Network/virtualNetworks/devops-network/subnets/devops-subnet",
            "network_security_group_id": "/subscriptions/e19611d3-62cd-4569-99b9-10ba8d0f4e79/resourceGroups/devops-resources/providers/Microsoft.Network/networkSecurityGroups/devops-sg",
            "subnet_id": "/subscriptions/e19611d3-62cd-4569-99b9-10ba8d0f4e79/resourceGroups/devops-resources/providers/Microsoft.Network/virtualNetworks/devops-network/subnets/devops-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.devops_sg",
            "azurerm_resource_group.devops_rg",
            "azurerm_subnet.devops-subnet",
            "azurerm_virtual_network.devops_vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "devops_vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f98efc20-b434-41f0-830f-758dd8989422",
            "id": "/subscriptions/e19611d3-62cd-4569-99b9-10ba8d0f4e79/resourceGroups/devops-resources/providers/Microsoft.Network/virtualNetworks/devops-network",
            "location": "swedencentral",
            "name": "devops-network",
            "resource_group_name": "devops-resources",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.devops_rg"
          ]
        }
      ]
    }
  ]
}